refactoring: project architecture adjustment
